# atranscoder-rpc

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.scratch  LICENSE.md  README.md
.docker/: APKBUILD
.github/workflows/: ci.yml
src/: api_key.rs  dto.rs  filepath.rs  json_error.rs  main.rs  server.rs  task.rs  thread_pool.rs  transcoder.rs
