[package]
name = "atranscoder-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum_typed_multipart = "0.11.1"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
num_cpus = "1.16.0"
ffmpeg-next = "7.0.1"